Fix paragraph spacing

--- a/styles/global.css
+++ b/styles/global.css
@@ -28,6 +28,7 @@ p {
   margin: 30px;
   font-size: .7em;
   color: white;
+  line-height: 20px;
 }
 
 h1 {
